# foundation-models-perturbation

./: README.md
benchmark/: README.md  pyproject.toml
benchmark/benchmark/: __init__.py  paths.py
benchmark/benchmark/benchmark/: README.md  bench_essential_deg.py  bench_essential_lfc.py  bench_norman_lfc.py  bench_sciplex_deg.py  bench_sciplex_lfc.py  bench_tahoe_deg.py  bench_tahoe_lfc.py  logistic_regression.py
benchmark/benchmark/benchmark/config/essential/: config_essential_deg.yaml  config_essential_deg_baseline.yaml  config_essential_lfc.yaml  config_essential_lfc_baseline.yaml
benchmark/benchmark/benchmark/config/norman/: config_norman_lfc.yaml  (+1 more)
benchmark/benchmark/experimental_error/: run_exp_error_essential.py  run_exp_error_essential_deg.py  run_exp_error_plate_matched.py  run_exp_error_sciplex_deg.py  run_exp_error_tahoe_deg.py  utils.py
benchmark/benchmark/fusion/: README.md  main.py
benchmark/benchmark/fusion/config/: essential_deg_simple.yaml  essential_lfc_full.yaml  essential_lfc_simple.yaml  sciplex_deg_simple.yaml  tahoe_deg_simple.yaml
benchmark/benchmark/fusion/model/: callbacks.py
benchmark/benchmark/fusion/utils/: compute_cell_line_controls.py
benchmark/benchmark/preprocessing/differentially_expressed_genes/: README.md  deg_essential.py  deg_sciplex3.py  deg_tahoe.py
benchmark/benchmark/preprocessing/pseudobulk/: README.md  pseudobulk_essential.py  pseudobulk_norman.py  pseudobulk_sciplex3.py  pseudobulk_tahoe.py  utils.py
benchmark/benchmark/task/: deg_evaluate.py  metrics.py  regression_evaluate.py  task.py
(+149 files in other folders)
